# CodeForces

Daily/: CMakeLists.txt
Daily/Anton_And_Danik/: CMakeLists.txt  main.c
Daily/Bear_And_Big_Brother/: CMakeLists.txt  main.cpp
Daily/Beautiful_Year/: CMakeLists.txt  main.c
Daily/Boy_Or_Girl/: CMakeLists.txt  main.cpp
Daily/Domino_Piling/: CMakeLists.txt  main.cpp
Daily/Elephant/: CMakeLists.txt  main.cpp
Daily/George_And_Accomodation/: CMakeLists.txt  main.c
Daily/Helpful_Maths/: CMakeLists.txt  main.cpp
Daily/In_Search_Of_An_Easy_Problem/: CMakeLists.txt  main.c
Daily/Nearly_Lucky_Number/: CMakeLists.txt  main.c
Daily/Next_Round/: CMakeLists.txt  main.cpp
Daily/Petya_And_Strings/: CMakeLists.txt  main.cpp
Daily/Queue_At_The_School/: CMakeLists.txt  main.c
Daily/Soldier_And_Bananas/: CMakeLists.txt  main.cpp
Daily/Stones_On_The_Table/: CMakeLists.txt  main.cpp
Daily/Tram/: CMakeLists.txt  main.c
Daily/Translation/: CMakeLists.txt  main.c
Daily/Vanya_And_Fence/: CMakeLists.txt  main.c
Daily/Word/: CMakeLists.txt  main.c
Daily/Word_Capitalization/: CMakeLists.txt  main.cpp
Daily/Wrong_Subtraction/: CMakeLists.txt  main.c
Daily/common/: CMakeLists.txt
Daily/common/include/: logger.h
Daily/common/src/: logger.cpp
