cmake_minimum_required(VERSION 4.1)
project(CodeForces_Daily CXX)

add_subdirectory(common)

add_subdirectory(Bits_Plus_Plus)

add_subdirectory(Next_Round)

add_subdirectory(Domino_Piling)

add_subdirectory(Petya_And_Strings)

add_subdirectory(Boy_Or_Girl)

add_subdirectory(Helpful_Maths)

add_subdirectory(Word_Capitalization)

add_subdirectory(Bear_And_Big_Brother)

add_subdirectory(Elephant)

add_subdirectory(Stones_On_The_Table)

add_subdirectory(Soldier_And_Bananas)

add_subdirectory(Word)

add_subdirectory(Wrong_Subtraction)

add_subdirectory(Nearly_Lucky_Number)

add_subdirectory(Anton_And_Danik)

add_subdirectory(Translation)

add_subdirectory(Vanya_And_Fence)

add_subdirectory(Tram)

add_subdirectory(Beautiful_Year)

add_subdirectory(In_Search_Of_An_Easy_Problem)

add_subdirectory(Queue_At_The_School)

add_subdirectory(George_And_Accomodation)